src/test/deca/context/valid/not_provided/affect-float.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    a = 1.0
//
// Historique:
//    cree le 01/01/2022

{
   float a;
   a = 1;
   a;
}