src/test/deca/context/invalid/variables/double_definition.deca
// Description:
//    Définir une variable deux fois.
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 17/01/2022
{
    int x = 0;
    int x = 1;
}
